Bug 160196 - Unable to save preferences for Color Management: ManagedView
Summary: Unable to save preferences for Color Management: ManagedView
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Showfoto-Setup (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-01 07:01 UTC by Andrew Svet
Modified: 2022-02-05 05:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Svet 2008-04-01 07:01:11 UTC
Version:           0.8.0 (using 3.5.9, Debian Package 4:3.5.9.dfsg.1-2+b1 (lenny/sid))
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.24-1-686

"Use color-managed view" in Preferences>Color Management is always disabled and there is no way to enable it. I mean, if i check it and hit Ok the option is not saved: open preferences dialog again and it's disabled. I tried to modify showfotorc manually too, but on next launch it reverts the setting to disabled again.
Comment 1 Andi Clemens 2008-12-11 09:49:05 UTC
I can confirm this, even if every profile field is filled out, the settings for color-managed view are not saved.

Andi
Comment 2 Andi Clemens 2008-12-11 09:59:50 UTC
This is also true for trunk.
Comment 3 Andi Clemens 2009-02-13 13:51:32 UTC
SVN commit 925507 by aclemens:

readSettings() in SetupICC is called 3 times when called the
first time in the ctor. This is due to a signal emitted when
the "ManagedView" checkbox is set. Changing the order of the
method calls in the ctor fixes this.
The same is true for the EditorWindow class: we need to block
the signals in applyStandardSettings() to avoid multiple calls
and toggles of the managedView controls, otherwise wrong settings
are loaded / saved.

BUG:160196

 M  +4 -0      imageeditor/editor/editorwindow.cpp  
 M  +4 -1      setup/setupicc.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=925507