readSettings() in SetupICC is called 3 times when called the first time in the ctor. This is due to a signal emitted when the "ManagedView" checkbox is set. Changing the order of the method calls in the ctor fixes this. The same is true for the EditorWindow class: we need to block the signals in applyStandardSettings() to avoid multiple calls and toggles of the managedView controls, otherwise wrong settings are loaded / saved.

BUG:160196

svn path=/trunk/extragear/graphics/digikam/; revision=925507